# un-orchestrator

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  README_COMPILE.md  README_OpenWRT_ARM.md  README_OpenWRT_MIPS.md  TODO
contrib/: inih.patch
contrib/OpenWrt/json-spirit-arm/: CMakeLists.txt  openwrt-toolchain.cmake
contrib/OpenWrt/json-spirit-mips/: CMakeLists.txt  openwrt-toolchain.cmake
contrib/OpenWrt/name-resolver/: CMakeLists.txt  Makefile
contrib/OpenWrt/orchestrator/: CMakeLists.txt
name-resolver/: CMakeLists.txt
name-resolver/config/: example_er.xml
orchestrator/: CMakeLists.txt  README_COMPILE.md  README_NF-FG.md  README_RUN.md  README_security.md  node_orchestrator.cc
orchestrator/compute_controller/: compute_controller.cc  compute_controller.h  startNF_in.h  updateNF_in.h
orchestrator/config/: default-config.ini
orchestrator/monitoring_controller/: monitoring_controller.cc  monitoring_controller.h
orchestrator/network_controller/openflow_controller/: controller.cc
orchestrator/network_controller/switch_manager/: addEndpoint_in.h  addNFports_in.h  addNFports_out.h  addVirtualLink_in.h  addVirtualLink_out.h  checkPhysicalPorts_in.h  createLSIin.h  createLSIout.h  destroyEndpoint_in.h  destroyNFports_in.h  destroyVirtualLink_in.h
orchestrator/node_resource_manager/graph/: match.h  vlan_action.h
orchestrator/node_resource_manager/graph_manager/: graph_manager.cc  graph_manager.h  virtual_link.h
orchestrator/node_resource_manager/pub_sub/: pub_sub.cc  pub_sub.h
orchestrator/node_resource_manager/resource_manager/: resource_manager.cc  (+1 more)
orchestrator/utils/: constants.h
utils/: README_SET_UP.md  deploy.yml  start_ovs.sh
utils/ovs_utils/: README.md
utils/travis-ci/: build.sh  prepare.sh
virtualizer/: .graph.json  .universalnode.xml  virtualizer.py
virtualizer/config/: configuration.ini
(+75 files in other folders)
